--- a/MyBroker/config/appConfig.json
+++ b/MyBroker/config/appConfig.json
@@ -4,7 +4,7 @@
 	  "port"     : "3306",
 	  "user"     : "tmoes",
 	  "password" : "tmoes",
-	  "database" : "tmoes"
+	  "database" : "mybroker"
   },
 
   "login-portal": {
