--- a/MyBroker/config/appConfig.json
+++ b/MyBroker/config/appConfig.json
@@ -2,8 +2,8 @@
   "mysql": {
 	  "host"     : "localhost",
 	  "port"     : "3306",
-	  "user"     : "tmoes",
-	  "password" : "tmoes",
+	  "user"     : "root",
+	  "password" : "adminadmin",
 	  "database" : "mybroker"
   },
   
