--- a/MyBroker/package.json
+++ b/MyBroker/package.json
@@ -11,6 +11,9 @@
     "pbkdf2-password": "1.2.1",
     "express-session": "1.15.6",
     "express-mysql-session": "2.1.0",
+    "request": "2.88.0",
+    "request-promise": "4.2.4",
+    "request-promise-native": "1.0.7",
     "ejs": "2.6.1",
     "jade": "*"
   }
