--- a/MyBroker/package.json
+++ b/MyBroker/package.json
@@ -14,6 +14,7 @@
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "request-promise-native": "1.0.7",
+    "cheerio": "0.22.0",
     "ejs": "2.6.1",
     "jade": "*"
   }
