--- a/MyBroker/package.json
+++ b/MyBroker/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "nodemailer": "*",
     "express": "3.2.6",
     "mysql": "2.16.0",
     "pbkdf2-password": "1.2.1",
